sandbox/output
MedicineClash.java:13: error: cannot find symbol
                MedicineClash.isOverlapped(customers, daysBeforeToday, now))
                             ^
  symbol:   method isOverlapped(List<Customer>,long,LocalDate)
  location: class MedicineClash
1 error
